# selenium-webdriver-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: browser_type.py  web_settings.py
data/: text_data.py
data/csv/: data_driven.csv
pom/: web_form_page.py  web_form_page_target.py
tests/: conftest.py  test_selenium_web_form.py  test_selenium_web_form_data_driven.py  test_selenium_web_form_fixture.py  test_selenium_web_form_parallel.py  test_selenium_web_form_pom.py
utils/: reader.py
