[project]
name = "python"
version = "1.0.0"
dependencies = [
  "selenium",
  "pytest"
]
requires-python = ">=3.12"
authors = [
  {name = "Alex"}
]
maintainers = [
  {name = "Alex"}
]
description = "Learn Selenium with Python"
readme = "README.md"

[project.urls]
Repository = "https://github.com/TechWithAlexDuta/vs_code_selenium.git"

[tool.pytest.ini_options]
markers = [
    "selenium",
    "selenium_pom"
]