[project]
name = "selenium_webdriver_python"
version = "1.0.0"
dependencies = [
  "pytest",
  "pytest-html",
  "pytest-xdist",
  "selenium"
]
requires-python = ">=3.12"
authors = [
  {name = "Alex Duta"}
]
maintainers = [
  {name = "Alex Duta"}
]
description = "Learn Selenium with Python"
readme = "README.md"

[project.urls]
Repository = "https://github.com/TechWithAlexDuta/selenium-webdriver-python.git"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
markers = [
    "selenium",
    "selenium_pom",
    "selenium_parallel",
    "selenium_data_driven"
]